turtleart.diskfour.DiskFour.scala.error
Compilation error:
DiskFour:11: error: Missing closing brace `}' assumed here
}
^DiskFour:20: error: Missing closing brace `}' assumed here
}
^